--- a/openmp/CMakeLists.txt
+++ b/openmp/CMakeLists.txt
@@ -62,7 +62,8 @@ set(ENABLE_LIBOMPTARGET ON)
 # Currently libomptarget cannot be compiled on Windows or MacOS X.
 # Since the device plugins are only supported on Linux anyway,
 # there is no point in trying to compile libomptarget on other OSes.
-if (APPLE OR WIN32 OR NOT OPENMP_HAVE_STD_CPP11_FLAG)
+# Disable libomptarget on VE also since it doesn't work at the moment.
+if (APPLE OR WIN32 OR ("${LIBOMP_ARCH}" STREQUAL "ve") OR NOT OPENMP_HAVE_STD_CPP11_FLAG)
   set(ENABLE_LIBOMPTARGET OFF)
 endif()
 
